--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
